# jtl2datev

./: .env.example  .gitignore  CLAUDE.md  README.md  next-session.md  pyproject.toml
.claude/agents/: coder.md  docs-writer.md
data/: exchange_rates.json
docs/: architecture.md  audit-q1-2026-error-belege.md  datev-format.md  db-schema.md  dutypay-format.md  status.md  tax-rules.md  taxually-format.md  verbringung.md
docs/review/: CONSOLIDATED.md  architecture.md  deferred.md  robustness.md  tax-correctness.md
samples/: .gitignore  README.md
src/jtl2datev/: cli.py
src/jtl2datev/api/: __init__.py  auth.py  dependencies.py  main.py
src/jtl2datev/api/routers/: exports.py  reports.py
src/jtl2datev/cli/: __init__.py  _common.py  export_datev.py  export_dutypay.py  export_taxually.py  export_verbringung.py  import_rates.py  mixed_vat_check.py  reconcile.py
src/jtl2datev/core/: __init__.py  archive.py  config.py  datev.py  datev_delta.py  db_jtl.py  dutypay.py  dutypay_delta.py  exchange_rates.py  models.py  pipeline.py  preflight.py  reconcile.py  reference_data.py  repositories.py  rules.py  tax_engine.py  taxually.py  taxually_delta.py  verbringung_parser.py  verbringung_pdf.py  verbringung_pricing.py  verbringung_taxually.py
src/jtl2datev/core/services/: __init__.py  datev_service.py  dutypay_service.py  mixed_vat_service.py  reconcile_service.py  taxually_service.py  verbringung_service.py
tests/: test_api.py  test_cli.py  test_datev.py  test_datev_delta.py  test_db_jtl.py  test_dutypay.py  test_dutypay_delta.py  test_exchange_rates.py  test_pipeline.py  test_preflight.py  test_reconcile.py  test_reconcile_runner.py  test_rules.py  test_tax_engine.py  test_taxually.py  test_verbringung_parser.py  test_verbringung_parser_encoding.py  test_verbringung_pdf.py  test_verbringung_pricing.py  test_verbringung_taxually.py
