[project]
name = "jtl2datev"
version = "0.1.0"
description = "Konsolen-Tool zum Export von JTL-Rechnungen ins DATEV-Format. Spätere Integration in eigenes ERP (FastAPI + React 19) vorgesehen — Core-Library bleibt framework-agnostisch."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
jtl2datev = "jtl2datev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live JTL DB (credentials in .env)",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
