[project]
name = "jtl2datev"
version = "0.1.0"
description = "Konsolen-Tool zum Export von JTL-Rechnungen ins DATEV-Format. Spätere Integration in eigenes ERP (FastAPI + React 19) vorgesehen — Core-Library bleibt framework-agnostisch."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
    "openpyxl>=3.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",  # für TestClient
]

[project.scripts]
jtl2datev = "jtl2datev.cli:main"
jtl2datev-api = "jtl2datev.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live JTL DB (credentials in .env)",
]

[dependency-groups]
dev = [
    "pdfplumber>=0.11",
]
